# 4-jukugo

./: .gitignore  README.md  config.yaml  pyproject.toml
config/: default_config.yaml
config/data/: default_data.yaml
config/trainer/: default_trainer.yaml
dataset/: not-kanji-ids.csv  sanobo.csv  sumitomo1.csv  train.csv
src/: app.py  inference.py  preprocess.py  train.py
src/base/: data.py  model.py
src/factory/: dataset.py  preprocess.py
src/scraper/: scrapy.cfg
src/scraper/fourjukugo/: items.py  middlewares.py  pipelines.py  settings.py
src/scraper/fourjukugo/spiders/: qiita.py  sanabo.py  sumitomo.py  sumitomo2.py
